--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .main {
-  flex-grow: 1;
+  flex: 1 0 auto;
 }
 
 .title {
@@ -68,3 +68,31 @@ body {
         box-shadow: 0px 0px 0px 4px rgba(99, 166, 14, 0.5);
       }
     }
+
+    .filter {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 45px;
+    &__item {
+      &:not(:last-child) {
+        margin-right: 27px;
+      }
+    }
+  
+    &__btn {
+      color: $dark-500;
+      @include Lato(700);
+      text-transform: uppercase;
+      font-size: 15px;
+      border-bottom: 3px solid transparent;
+      transition: border-bottom-color 0.3s;
+      &:hover {
+        border-bottom: 3px solid $green-200;
+      }
+
+      
+    }
+    .mixitup-control-active {
+      border-bottom: 3px solid $green-200;
+    }
+  }
