--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,6 +5,7 @@ $green-100: #eff6e7;
 $dark-900: #121212;
 $dark-800: #31352B;
 $dark-500: #505050;
+$dark-100: #F5F5F5;
 $red-900: #cf3e3b;
 $orange-900: #ff7a00;
 $yellow-900: #ffb800;
