--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,7 +1,107 @@
 <header class="header">
+  <div class="cart">
+    <div class="card__wrapper">
+      <div class="cart__top">
+        <div class="cart__top-wrapper">
+          <h3 class="cart__title">Корзина</h3>
+          <button class="cart__clear">очистить корзину</button>
+        </div>
+        <button class="cart__close" type="btn">
+          <svg class="cart__close-img" width="24" height="24">
+            <use xlink:href="images/sprite.svg#close"></use>
+          </svg>
+        </button>
+      </div>
+      <ul class="cart__body">
+        <li class="cart-list">
+          <div class="cart-list__item">
+            <div class="cart-list__img-box">
+              <img class="cart-list__img" src="../images/top_product/pineapple.png" alt="Ананас">
+            </div>
+            <div class="cart-list__text-box">
+              <h3 class="cart-list__title">Ананас, 1 кг</h3>
+              <span class="cart-list__price">999 <span>₽</span> </span>
+            </div>
+          </div>
+          <div class="cart-list__box">
+            <div class="cart-list__del">
+              <svg class="cart__close-img" width="12" height="12">
+                <use xlink:href="images/sprite.svg#close"></use>
+              </svg>
+            </div>
+            <div class="cart-list__footer">
+              <div class="cart-list__counter">
+                <button class="cart-list__btn">
+                  <svg width="12" height="12">
+                    <use xlink:href="images/sprite.svg#minus"></use>
+                  </svg>
+                </button>
+                <span class="cart-list__amount">2</span>
+                <button class="cart-list__btn">
+                  <svg width="12" height="12">
+                    <use xlink:href="images/sprite.svg#plus"></use>
+                  </svg>
+                </button>
+                
+              </div>
+              <span class="cart-list__price">
+                1998 <span>₽</span>
+              </span>
+            </div>
+          </div>
+        </li>
+
+        <li class="cart-list">
+          <div class="cart-list__item">
+            <div class="cart-list__img-box">
+              <img class="cart-list__img" src="../images/top_product/dragon.png" alt="Питахайя">
+            </div>
+            <div class="cart-list__text-box">
+              <h3 class="cart-list__title">Питахайя красная с белой мякотью, 1шт</h3>
+              <span class="cart-list__price">1019 <span>₽</span> </span>
+            </div>
+          </div>
+          <div class="cart-list__box">
+            <div class="cart-list__del">
+              <svg class="cart__close-img" width="12" height="12">
+                <use xlink:href="images/sprite.svg#close"></use>
+              </svg>
+            </div>
+            <div class="cart-list__footer">
+              <div class="cart-list__counter">
+                <button class="cart-list__btn">
+                  <svg width="12" height="12">
+                    <use xlink:href="images/sprite.svg#minus"></use>
+                  </svg>
+                </button>
+                <span class="cart-list__amount">2</span>
+                <button class="cart-list__btn">
+                  <svg width="12" height="12">
+                    <use xlink:href="images/sprite.svg#plus"></use>
+                  </svg>
+                </button>
+        
+              </div>
+              <span class="cart-list__price">
+                2038 <span>₽</span>
+              </span>
+            </div>
+          </div>
+        </li>
+      </ul>
+      <div class="cart__bottom">
+        <div class="cart__bottom-wrapper">
+          <span class="cart__bottom-text">Товаров на сумму</span>
+          <span class="cart__sum">2038<span>₽</span></span>
+        </div>
+        <button class="cart__buy">Оформить заказ</button>
+      </div>
+    </div>
+  </div>
   <div class="header__top">
     <div class="container">
       <div class="header__wrapper header__wrapper--top">
+
         <ul class="header__links">
           <li class="header__links-item">
             <a class="header__link header__link--address" href="#">
@@ -70,15 +170,19 @@
             </a>
           </li>
           <li class="user__item">
-            <a class="user__link" href="#">
+
+            <button class="user__link user__link--cart" type="button">
+
               <span class="user__num">12</span>
               <span class="sr-only">корзина</span>
               <svg class="user__img">
                 <use xlink:href="images/sprite.svg#cart"></use>
               </svg>
-            </a>
+            </button>
           </li>
+
         </ul>
+
       </div>
     </div>
   </div>
