--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $green-900: #63a60e;
 $green-800: #4D800C;
 $green-200: #e0edcf;
 $green-100: #eff6e7;
+$dark : #000;
 $dark-900: #121212;
 $dark-800: #31352B;
 $dark-500: #505050;
