--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   &__top {
     background-color: $dark-800;
   }
@@ -12,6 +13,7 @@
       padding: 17px 0;
       color: $white;
       text-transform: uppercase;
+      
     }
 
     &--bottom { 
@@ -160,6 +162,166 @@
     }
   }
 }
+
+  .cart {
+    display: none;
+    max-width: 475px;
+    width: 100%;
+    height: 100vh;
+    background-color: $white;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 3;
+
+    &--active {
+      display: block;
+    }
+
+    &__wrapper {
+      // display: flex;
+      // flex-direction: column;
+    }
+
+    &__top {
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__title {
+      font-size: 24px;
+      line-height: 1.2;
+      color: $dark;
+    }
+
+    &__clear {
+      @include Lato(300);
+      color: $dark;
+      line-height: 1.2;
+    }
+
+    &__body {
+      padding: 13px 11px;
+      background-color: $silver-100;
+      // flex: 1 0 auto;
+      height: calc(100vh - 213px);
+    }
+
+		&__bottom {
+
+		}
+
+    &__bottom-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 25px;
+    }
+
+		&__bottom-text {
+      font-size: 24px;
+      line-height: 1.2;
+      color: $dark;
+		}
+
+		&__sum {
+      font-size: 20px;
+      line-height: 1;
+      color: $dark-500;
+      @include Lato(600);
+      span {
+        font-size: 15px;
+      }
+		}
+
+		&__buy {
+      width: 100%;
+      margin: 0 auto;
+      display: block;
+      text-align: center;
+      padding: 22.5px 0;
+      background-color: $green-900;
+      color: $white;
+      font-size: 18px;
+      line-height: 1.3;
+
+		}
+}
+
+.cart-list {
+  background-color: $white;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid $silver-600;
+  border-radius: 3px;
+  padding: 12px;
+  margin-bottom: 12px;
+
+		&__item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 12px;
+		}
+
+		&__img-box {
+      max-width: 60px;
+      height: 60px;
+      margin-right: 32px;
+		}
+
+		&__img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+		}
+
+		&__title {
+      max-width: 133px;
+      width: 100%;
+      display: block;
+      color: $dark-900;
+      @include Lato(600);
+      margin-bottom: 5px;
+		}
+
+		&__price {
+      display: block;
+      span {
+        font-size: 12px;
+      }
+		}
+
+		&__del {
+      text-align: right;
+      margin-bottom: 20px;
+		}
+
+		&__footer {
+      display: flex;
+      align-items: center;
+		}
+
+		&__counter {
+      background-color: rgba(99, 166, 14, 0.1);
+      margin-right: 12px;
+		}
+
+    &__amount {
+      padding: 5px 14px;
+    }
+
+    &__btn {
+      background-color: $green-900;
+      padding: 4px 6px;
+    }
+
+}
+
+
+
+
+
 
 .user {
   margin-right: 10px;
